--- a/force-app/main/default/classes/WarehouseCalloutServiceTest.cls
+++ b/force-app/main/default/classes/WarehouseCalloutServiceTest.cls
@@ -1,5 +1,15 @@
 @IsTest
 private class WarehouseCalloutServiceTest {
-    // implement your mock callout test here
+    
+    @isTest static void testCallout() {
+        // Set mock callout class 
+        Test.setMock(HttpCalloutMock.class, new WarehouseCalloutServiceMock());
+
+        Test.startTest();
+            WarehouseCalloutService.runWarehouseEquipmentSync();
+        Test.stopTest();
+        
+        System.assertEquals([SELECT Id FROM Product2].size(), 2, 'Error');
+    }
 
 }
